--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "downloadjs": "^1.4.7",
     "formik": "^2.2.9",
     "html2canvas": "^1.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
