--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.26",
     "axios": "^1.3.4",
     "downloadjs": "^1.4.7",
     "formik": "^2.2.9",
     "html2canvas": "^1.0.0",
+    "match-sorter": "^6.3.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-table": "^7.8.0",
+    "react-table-plugins": "^1.3.3",
     "react-toastify": "^9.1.2",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
