--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-table": "^7.8.0",
     "react-table-plugins": "^1.3.3",
     "react-toastify": "^9.1.2",
+    "swiper": "^9.4.1",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
